# rkdLib

./: .gitmodules  CMakeLists.txt  Dockerfile  LICENSE.md  README.md  TODO
.github/workflows/: docker-image.yml
cmake/: Findtrac_ik_lib.cmake  rkdConfig.cmake.in
examples/: example_init_class.cpp
include/RKD/: Robot.h  robot.h
include/rkd/: Robot.h
src/: Robot.cpp  robot.cpp  test.cpp
tests/: test_robot.cpp
urdf/: panda.urdf
